# sanic-nuxt-openapi-example

./: .gitignore  README.md
backend/: .env  .flake8  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py  tox.ini
backend/alembic/: env.py
backend/alembic/versions/: d9bc8fcf1265_init.py
backend/todo_app/: __init__.py
backend/todo_app/api/: __init__.py  auth.py  test_auth.py  todos.py
backend/todo_app/api/error/: handler.py
backend/todo_app/models/: __init__.py  db.py  todo.py
docs/: openapi.v1.yaml
frontend/: .babelrc  .env  .eslintrc.js  .prettierignore  README.md  index.d.ts  jest.config.js  nuxt.config.js  package-lock.json  package.json  test_setup.js  tsconfig.json
frontend/api/: ServerApi.ts
frontend/api/generate/: runtime.ts
frontend/api/generate/apis/: index.ts  (+2 more)
frontend/assets/locales/: ja.json
frontend/assets/style/: common.scss  variables.scss
frontend/components/auth/: SignInForm.vue
frontend/components/common/: Logo.vue  PageLoading.vue
frontend/components/navigator/: SignInUserMenu.vue
frontend/components/todo/: CreateTodo.vue  EditTodo.vue  TodoList.vue  TodoTextField.vue
frontend/layouts/: auth.vue  default.vue  error.vue
frontend/middleware/: auth.ts
frontend/pages/: -test.vue  index.vue
frontend/pages/auth/: sign_in.vue
frontend/plugins/: format-for-template.ts  nuxt-i18n.ts
frontend/scripts/api/: generate.js  swag-ts-conf.json
frontend/store/: auth.ts  index.ts
frontend/utils/: ViewUtils.spec.ts  ViewUtils.ts
frontend/utils/validator/: Validator.spec.ts  Validator.ts  model.ts
(+14 files in other folders)
